updating dot files